test/scc/decl/semantic-errors/063.t
typedef int a;
typedef char a;